# Sonic-Hybrid-Ultimate

./: .gitattributes  .gitignore  .gitmodules  .windsurfrules  AI tasks.txt  ARCHITECTURE_PROPOSAL.md  BUILD_INSTRUCTIONS.md  CHANGES.md  CHANGES_MADE.md  CHANGES_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILATION_FIXES_SUMMARY.md  CONTRIBUTING.md  CRASH_FIX_README.md  GETTING_STARTED.md  LICENSE.md  README.md  SINGLE_EXECUTABLE.md  SONIC3_AIR_SETUP.md  SONIC3_FIX_SUMMARY.md  TEAMFOREVER_INTEGRATION.md  TROUBLESHOOTING.md  VIDEO_FIX_SUMMARY.md  apply_teamforever.sh  build.ps1  build_all.ps1  build_all.sh  build_clean.sh  build_native_libs.bat  build_native_libs.ps1  build_native_libs.sh  check_build_status.sh  diagnose.ps1  fetch_rsdk.ps1  fetch_rsdkv3.sh  fetch_rsdkv4.sh  fetch_rsdkv5.sh  fetch_single.ps1  publish.sh  (+9 more)
.github/: build_script.yml
.github/agents/: my-agent.agent.md  rsdk-engine-expert.agent.md
.github/workflows/: c-cpp.yml  windows.yml
Custom Client/: Config.cs  CustomClient.csproj  Logger.cs  Program.cs  README.md
Custom Client/Core/: TransitionHandler.cpp
Custom Client/Engines/: OxygenEngine.cs  RSDKEngine.cs  RSDKEngine.hpp
Custom Client/Tools/: RSDKAnalyzer.cs
Custom-Client/: Config.cs  CustomClient.csproj  Engine.cpp  Engine.hpp  Logger.cs  Program.cs  README.md
Custom-Client/Core/: FileLogger.cs  GameTransitionManager.cs  ILogger.cs  LoggerProvider.cs  TransitionHandler.hpp  UILoggerProvider.cs
Custom-Client/Engines/: EngineManager.cpp  EngineManager.hpp  GameEngineBase.hpp  IGameEngine.cs  OxygenEngine.cs  OxygenEngine.hpp  RSDKEngine.cs
Custom-Client/Integration/: OxygenIntegration.hpp  RSDKIntegration.hpp
Custom-Client/Tools/: RSDKAnalyzer.cs
Hybrid-RSDK Main/: CMakeLists.txt
Hybrid-RSDK Main/RSDKV4/: RSDKBridge.hpp
Hybrid-RSDK Main/RSDKV4/RSDKV4/: Drawing.cpp  Ini.hpp  ModAPI.cpp  NativeObjects.hpp  RetroEngine.cpp  RetroEngine.hpp  TransitionManager.cpp  TransitionManager.hpp  fcaseopen.h
Hybrid-RSDK Main/sonic-hybrid/: HybridEngine.cpp  HybridEngine.hpp  StateManager.cpp  StateManager.hpp  TransitionManager.cpp  TransitionManager.hpp
Hybrid-RSDK Main/sonic-hybrid/Scripts/Global/: StageSetup.txt
Hybrid-RSDK Main/sonic-hybrid/Scripts/MZ/: UFO.txt
Hybrid-RSDK-Main/: CMakeLists.txt  OxygenWrapper.cpp  RSDKv3Wrapper.cpp  RSDKv4Wrapper.cpp
Hybrid-RSDK-Main/RSDKV4/: RSDKBridge.cpp
Hybrid-RSDK-Main/RSDKV4/RSDKV4/: Debug.cpp  Debug.hpp  Drawing.hpp  ModAPI.cpp  NativeObjects.cpp  NativeObjects.hpp  Object.hpp  RetroEngine.cpp  RetroEngine.hpp  Script.cpp  Script.hpp  Text.hpp  Userdata.cpp  Userdata.hpp  cocoaHelpers.hpp  main.cpp
Hybrid-RSDK-Main/sonic-hybrid/: HybridEngine.cpp  HybridEngine.hpp  StateManager.cpp  TransitionManager.cpp  TransitionManager.hpp
Hybrid-RSDK-Main/sonic-hybrid/Scripts/ARZ/: Brick.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/CNZ/: Elevator.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/Enemies/: Crawl.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/Global/: ActFinish.txt  Monitor.txt  RedSpring.txt  Ring.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/LZ/: GrabBar.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/MPZ/: Nut.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/R3/: Bomb.txt
Hybrid-RSDK-Main/sonic-hybrid/Scripts/Title/: Start.txt
Sonic 3 AIR Main/: README.md
Sonic 3 AIR Main/Oxygen/sonic3air/scripts/: main_oxygen.lemon
Sonic 3 AIR Main/librmx/source/rmxmedia/opengl/: VertexArrayObject.cpp
Sonic 3 AIR Main/librmx/source/rmxmedia/threads/: JobManager.cpp  Thread.cpp
Sonic 3 AIR Main/src/: main.c
scripts/: build.ps1  build_clean.sh  deps.sh  fetch_core.ps1  fetch_graphics.ps1  fetch_resources.ps1  fetch_rsdk.ps1  fetch_rsdkv3.sh  fetch_rsdkv5.sh  fetch_single.ps1  fetch_systems.ps1  fetch_utils.ps1
